# hades

./: README.md  hades.cabal
app/: Main.hs
src/: Hades.hs
src/Hades/: Game.hs  Hangman.hs  Main.hs  Random.hs
src/Hades/Game/: Bagels.hs  Hangman.hs  Word.hs
src/Hades/Lib/: Random.hs
test/: Main.hs
test/Hades/Game/: BagelsSpec.hs  HangmanSpec.hs  WordSpec.hs
test/Hades/Lib/: RandomSpec.hs
