cabal-version: 3.12

name: hades
version: 0.0.0.0

common common
  build-depends:
    , base >= 4.21.0 && < 4.22
  default-language:
    Haskell2010
  ghc-options:
    -Wall

library
  import:
    , common
  hs-source-dirs:
    src
  exposed-modules:
    Hades
    Hades.Hangman
    Hades.Main
    Hades.Random
  build-depends:
    , bytestring
    , random >= 1.3.1 && < 1.4
  default-extensions:
    TupleSections

executable hades
  import:
    , common
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    , hades

source-repository head
  type: git
  location: https://github.com/jpvillaisaza/hades
