cabal-version: 3.12

name: hades
version: 0.0.0.0

license: MIT
license-file: LICENSE

common common
  build-depends:
    , base >= 4.21.0 && < 4.22
  default-language:
    Haskell2010
  ghc-options:
    -Wall

library
  import:
    , common
  hs-source-dirs:
    src
  exposed-modules:
    Hades
    Hades.Game
    Hades.Game.Bagels
    Hades.Game.Hangman
    Hades.Game.Word
    Hades.Lib.Random
    Hades.Main
  other-modules:
    Paths_hades
  autogen-modules:
    Paths_hades
  build-depends:
    , bytestring
    , optparse-applicative >= 0.18.1 && < 0.19
    , random >= 1.3.1 && < 1.4
  default-extensions:
    TupleSections

executable hades
  import:
    , common
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    , hades

test-suite spec
  import:
    , common
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  other-modules:
    Hades.Game.BagelsSpec
    Hades.Game.HangmanSpec
    Hades.Game.WordSpec
    Hades.Lib.RandomSpec
  build-depends:
    , QuickCheck
    , hades
    , hspec
  build-tool-depends:
    hspec-discover:hspec-discover

source-repository head
  type: git
  location: https://github.com/jpvillaisaza/hades
